<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/set_reminder">

        <CheckBoxPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_notifications_24"
            app:key="@string/set_reminder"
            app:title="@string/text_reminder" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/language">
        <Preference
            app:icon="@drawable/ic_baseline_g_translate_24"
            app:iconSpaceReserved="false"
            app:key="@string/language"
            app:title="@string/change_language" />

    </PreferenceCategory>

</PreferenceScreen>