<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailUserActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail_user_background"
                android:paddingBottom="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="28dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txt_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/merriweather_bold_italic"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="@+id/imgAvatar"
                    app:layout_constraintStart_toStartOf="@+id/imgAvatar"
                    app:layout_constraintTop_toBottomOf="@+id/imgAvatar"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/txt_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorWhiteSecondary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/txt_detail_name"
                    app:layout_constraintStart_toStartOf="@+id/txt_detail_name"
                    app:layout_constraintTop_toBottomOf="@+id/txt_detail_name"
                    tools:text="@string/username" />


                <TextView
                    android:id="@+id/txt_detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_baseline_home_work"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_detail_username"
                    tools:text="@string/company" />

                <TextView
                    android:id="@+id/txt_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_baseline_location_on"
                    android:drawablePadding="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_detail_company"
                    tools:text="@string/location" />

                <TextView
                    android:id="@+id/txt_detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_detail_followers"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/txt_detail_followers"
                    tools:text="@string/zero_number" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/following"
                    android:textColor="@color/colorWhiteSecondary"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txt_detail_following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/txt_detail_following" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/followers"
                    android:textColor="@color/colorWhiteSecondary"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txt_detail_followers"
                    app:layout_constraintEnd_toStartOf="@+id/txt_detail_following"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/txt_detail_followers" />

                <TextView
                    android:id="@+id/txt_detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_people"
                    android:drawablePadding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_detail_repository"
                    app:layout_constraintEnd_toStartOf="@+id/textView8"
                    app:layout_constraintStart_toEndOf="@+id/txt_detail_repository"
                    app:layout_constraintTop_toTopOf="@+id/txt_detail_repository"
                    tools:text="@string/zero_number" />

                <TextView
                    android:id="@+id/txt_detail_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_baseline_repo"
                    android:drawablePadding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/txt_detail_followers"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_detail_location"
                    tools:text="@string/zero_number" />

                <ProgressBar
                    android:id="@+id/detailProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:tabIndicatorColor="#202127"
                app:tabIndicatorHeight="3dp"
                app:tabTextColor="@color/colorPrimary" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/favorite_fill"
            android:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            app:rippleColor="@color/colorPrimary" />
    </FrameLayout>
</ScrollView>